apps/cluster-gateway/actual-budget/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget-route
  namespace: base-gateway
  labels:
    app.kubernetes.io/instance: actual-budget
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: actualbudget
    app.kubernetes.io/version: 25.10.0
    helm.sh/chart: actualbudget-1.8.3
  annotations:
    argocd.argoproj.io/sync-wave: "1"  
spec:
  parentRefs:
    - name: base-gateway
      namespace: cluster-gateway 
  hostnames:
    - "actual-budget.hoareau-marion.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: actual-budget-actualbudget
          port: 5006
